@@ -38,6 +38,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #3774: Fixed an error when create a Tkinter menu item without command
+  and then remove it.
+
 - Fixed a modulefinder crash on certain relative imports.
 
 - Issue #4150: Pdb's "up" command now works for generator frames in post-mortem
